# romulo-colab

./: README.md  internet_utils.py  pyproject.toml  remo_core.py  test_remo.py
romulo-colab/: auto_mejora.py
romulo_colab/: internet_utils.py  memoria.py  pyproject.toml
tests/: test_remo.py
