[tool.poetry]
name = "romulo-colab"
version = "0.2.0"
description = "Romulo: Un proyecto de IA para la investigación científica autónoma."
authors = ["ProjectRomulo <tu_correo@example.com>"]

[tool.poetry.dependencies]
python = ">=3.7,<3.11"
scikit-learn = "^1.2.2"
numpy = "^1.24.3"
scipy = ">=3.9,<4.0"
requests = "^2.31.0"
beautifulsoup4 = "^4.12.2" # Dependencia añadida
sentence-transformers = "^2.2.2"
nltk = "*"

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
